styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');

*{margin: 0;
padding: 0;}

body{
    font-family: "Azeret Mono", monospace;
}

#header-container{
    max-width: 1440px;
    margin: 0 auto;
}
/*start nav section style */
.nav-container{
    max-width: 1140px;
    display: flex;
    margin: 0 auto;
    justify-content: space-between;
    padding: 30px 0px;
}

.nav-title{
    color: rgb(13, 19, 33);
    font-size: 28px;
    font-weight: 800;
}

.resume-download-btn{
    padding: 17px 24px 17px 24px;
    background: rgb(255, 255, 255);
    box-sizing: border-box;
    border: 1px solid rgb(13, 19, 33);
    border-radius: 8px;
    opacity: 0.8;
    color: rgb(13, 19, 33);
    font-size: 20px;
    font-weight: 600;
}
/* end nav section style */
/* start hero section style */
.hero-main-container{
    background-image: url('../assets/Hero-bg.png');
    border-top:  1px dashed rgba(13, 19, 33, 0.1);
    border-bottom: 1px dashed rgba(13, 19, 33, 0.1);
    border-width: thick;
    margin: 0 auto;
    margin-bottom:127px;
}

.hero-content-container{
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 1440px;
    height: 652px;
}

.hero-content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 582px;
    max-width: 998px;
}

.hero-title{
    color: rgb(13, 19, 33);
    font-size: 48px;
    font-weight: 800;
    line-height: 68px;
    margin: 24px 0px;
}

.hero-description{
    color: rgb(13, 19, 33);
    opacity: 0.7;
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    margin: 24px 0px;
}

.contact-button{
    padding: 21px 24px 21px 24px;
    border-radius: 8px;
    background: rgb(13, 19, 33);
    color: rgb(255, 255, 255);
    font-size: 20px;
    font-weight: 600;
    cursor: pointer;
}
/* end hero section style */

#main-container{
    max-width:1140px;
    height: 1395px;
    margin: 0 auto;
    border-radius: 16px;
    background: rgba(13, 19, 33, 0.02);
    
}

/* start why web development */
#Why-Web-Development-container{
    max-width: 946px;
    margin: 0 auto;
    padding: 80px;
}

.why-web-dev-content{
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    margin-bottom: 106px;
}

.why-web-dev-title{
    color: rgb(13, 19, 33);
    font-size: 32px;
    font-weight: 800;
    line-height: 37px;
    margin: 24px 0px;
}

.why-web-dev-description{
    color: rgb(13, 19, 33);
    opacity: 0.7;
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
}

/* start I will Do Coding and Change The World */
.about-coding-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 99px;
}

.about-coding-title{
    color: rgba(13, 19, 33, 0.7);
    font-size: 24px;
    font-weight: 700;
    line-height: 36px;
    margin: 16px 0px;
}

.about-coding-description{
    color: rgb(13, 19, 33);
    opacity: 0.7;
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    margin: 24px 0px;
}

.learn-more-button{
    box-sizing: border-box;
    border: 1px solid rgb(13, 19, 33);
    opacity: 0.7;
    padding: 12px 20px 12px 20px;
    color: rgb(13, 19, 33);
    font-size: 20px;
    font-weight: 600;
}
/* End I will Do Coding and Change The World */

/* start I will help People by creating Modern Web System style */
.help-people-container{
    margin-top: 138px;
    margin-bottom: 138px;
}

.help-people-content{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 80px;
}

.help-people-title{
    color: rgba(13, 19, 33, 0.7);
    font-size: 24px;
    font-weight: 700;
    line-height: 36px;
}

.help-people-description{
    color: rgb(13, 19, 33);
    opacity: 0.7;
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    margin: 24px 0px;
}
/* end I will help People by creating Modern Web System style */

/* end why web development */

